@@ -1,5 +1,11 @@
 changes since wmaker 0.62.0:
 ............................
+- added WMSetWidgetDefaultFont(), WMSetWidgetDefaultBoldFont()
+
+
+
+changes since wmaker 0.62.0:
+............................
 - added WM{S,G}etDataFormat()
 - added drag and drop
 - changed selection code
